Start messing with components; deciding look-and-feel.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,8 @@
-		<header>
-			This is the header
+		<header class="header mbf">
+			<div class="actionBar group">
+				<div class="icon icon--s fl">Logout</div>
+			</div>
+			<div class="header-title">
+				<h1>Title</h1>
+			</div>
 		</header>
