--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -23,12 +23,18 @@
 
 $plum: #4e4e5b
 
+$blue-500: #2196f3
+$blue-900: #0d47a1
+
+
 // ----- Base ----- //
 
 $c-background-invert: #fff
-$c-background: #ecf0f1
+$c-background: #eee
 $c-border: lighten($plum, 30%)
+$c-focus: #fff
 $c-highlight: $plum
+$c-shadow: rgba(0, 0, 0, 0.3)
 $c-subdue: lighten($plum, 40%)
 $c-text-invert: #fff
 $c-text: #444
