--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 	<body>
 <%= render 'layouts/header' %>
 
+		<section class="page">
 <%= yield %>
+		</section>
 
 <%= render 'layouts/footer' %>
 	</body>
