Add preliminary machine controller actions and views.

--- a/app/views/machines/_form.html.erb
+++ b/app/views/machines/_form.html.erb
@@ -1,1 +1,15 @@
 Machine New/Edit Form
+
+<%= form_for @machine do |f| %>
+	<% if @machine.errors.any? %>
+		<% @machine.errors.full_messages.each do |msg| %>
+			<p><%= msg %></p>
+		<% end %>
+	<% end %>
+
+	<%= f.text_field :name %><br>
+	<%= f.text_field :location %><br>
+	<%= f.text_field :ip_address %><br>
+
+	<%= f.submit %>
+<% end %>
