--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,1 +1,9 @@
 Machines Index
+
+<% if !@machines.blank? %>
+	<% for machine in @machines %>
+		- Machine: <%= machine.name %>
+	<% end %>
+<% else %>
+	
+<% end %>
