Add page title methodology, and rename articles to focuses. Also correct box-sizing and h1 margin issues.

--- a/app/assets/stylesheets/components/_focus.sass
+++ b/app/assets/stylesheets/components/_focus.sass
@@ -1,10 +1,10 @@
-.article
+.focus
 	background: $c-focus
 	border-radius: 2px
 	margin: auto
 	max-width: $b-maxWidth
 
-.article--top
+.focus--top
 	position: relative
 	
 	&:before
