--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 		<header class="header mbf">
 			<div class="actionBar group">
-				<div class="icon icon--s fl">Logout</div>
+				<div class="icon icon--s fr">Logout</div>
 			</div>
 			<div class="header-title">
-				<h1>Title</h1>
+				<h1 class="mbf"><%= yield :page_title %></h1>
 			</div>
 		</header>
