--- a/app/assets/stylesheets/foundation/_reset.sass
+++ b/app/assets/stylesheets/foundation/_reset.sass
@@ -385,3 +385,12 @@ table
 td,
 th
 	padding: 0
+
+/**
+ * Sue me.
+ */
+
+*
+	-webkit-box-sizing: border-box
+	-moz-box-sizing: border-box
+	box-sizing: border-box
