Allow for multiple focuses per page. Yes, that sounds like a bad thing. Perhaps focus isn't the best name for the articles. Doesn't matter too much.

--- a/app/assets/stylesheets/components/_focus.sass
+++ b/app/assets/stylesheets/components/_focus.sass
@@ -2,13 +2,13 @@
 	background: $c-focus
 	border-radius: 2px
 	margin: auto
+	margin-bottom: $b-space-l
 	max-width: $b-maxWidth
-
-.focus--top
+	padding: 1em
 	position: relative
 	
 	&:before
-		box-shadow: 0 0 4px 0 $c-shadow
+		box-shadow: 0 2px 4px 0 $c-shadow
 		content: ""
 		position: absolute
 		bottom: 0
