--- a/app/assets/stylesheets/components/_header.sass
+++ b/app/assets/stylesheets/components/_header.sass
@@ -3,7 +3,7 @@
 
 .header-title
 	background: $c-focus
-	box-shadow: 0 0 4px 0 $c-shadow
+	box-shadow: 0 2px 4px 0 $c-shadow
 	border-bottom: 1px solid $c-background
 	border-radius: 2px
 	border-bottom-left-radius: 0
