--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -2,3 +2,7 @@
 			<article class="focus focus--top">
 				Alerts Index
 			</article>
+
+			<article class="focus">
+				Secondary thing
+			</article>
