--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -1,1 +1,4 @@
-Alert Show
+<% page_title "Alert: #{@alert.name}" %>
+			<article class="focus focus--top">
+				Alert: <%= @alert.message %>
+			</article>
