--- a/app/views/disks/show.html.erb
+++ b/app/views/disks/show.html.erb
@@ -1,3 +1,4 @@
-Disk Show
-
-Disk: <%= @disk.name %>, capacity: <%= @disk.capacity %>
+<% page_title "Disk: #{@disk.name}" %>
+			<article class="focus focus--top">
+				<p>Disk: <%= @disk.name %>, capacity: <%= @disk.capacity %></p>
+			</article>
