Add article/focus components to machine views.

--- a/app/views/machines/edit.html.erb
+++ b/app/views/machines/edit.html.erb
@@ -1,3 +1,4 @@
-Machine Edit
-
+<% page_title "Editing #{@machine.name}" %>
+			<article class="focus focus--top">
 <%= render 'form' %>
+			</article>
