--- a/app/views/machines/show.html.erb
+++ b/app/views/machines/show.html.erb
@@ -1,3 +1,4 @@
-Machine Show
-
-Machine: <%= @machine.name %>
+<% page_title "Machine: #{@machine.name}" %>
+			<article class="focus focus--top">
+				<p>Machine: <%= @machine.name %></p>
+			</article>
