Add button and icon components - needs iteration.

--- a/app/assets/stylesheets/foundation/_base.sass
+++ b/app/assets/stylesheets/foundation/_base.sass
@@ -58,7 +58,7 @@ h4, .h4
 // ----- Links ----- //
 
 a
-	border-bottom: $b-border
+	// border-bottom: $b-border
 	color: $c-highlight
 	text-decoration: none
 	&:hover,
