--- a/app/views/alerts/show.html.erb
+++ b/app/views/alerts/show.html.erb
@@ -1,4 +1,12 @@
 <% page_title "Alert: #{@alert.name}" %>
 			<article class="focus focus--top">
+				<nav>
+					<a class="button button--icon" href="<%= url_for alerts_path %>">
+						<svg class="icon"><use xlink:href="#icon-back"></use></svg>
+					</a>
+					<a class="button button--icon" href="<%= url_for root_path %>">
+						<svg class="icon"><use xlink:href="#icon-home"></use></svg>
+					</a>
+				</nav>
 				Alert: <%= @alert.message %>
 			</article>
