--- a/app/assets/stylesheets/components/_button.sass
+++ b/app/assets/stylesheets/components/_button.sass
@@ -1,10 +1,14 @@
 .button
+	color: rgba(0, 0, 0, 0.54)
 	display: inline-block
 	margin-right: 1em
 	text-decoration: none
 
-.button--icon
-	color: rgba(0, 0, 0, 0.54)
-
 	&:active, &:focus, &:hover
 		color: rgba(0, 0, 0, 0.26)
+
+.button--light
+	color: rgba(255, 255, 255, 1)
+
+	&:active, &:focus, &:hover
+		color: rgba(255, 255, 255, 0.3)
