--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 		<header class="header mbf">
 			<div class="actionBar group">
-				<a class="button button--light fl">
+				<a class="button button--light fl" id="sideNav-button" href="#">
 					<svg class="icon"><use xlink:href="#icon-menu"></use></svg>
 				</a>
 <% if user_signed_in? %>
