--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>System Manager | <%= yield :page_title %></title>
 		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -17,6 +18,6 @@
 
 <%= render 'layouts/footer' %>
 
-		<div class="modalOverlay"></div>
+		<div class="modalOverlay" id="modalOverlay"></div>
 	</body>
 </html>
