Add link underlines back in, where appropriate.

--- a/app/assets/stylesheets/foundation/_base.sass
+++ b/app/assets/stylesheets/foundation/_base.sass
@@ -58,13 +58,13 @@ h4, .h4
 // ----- Links ----- //
 
 a
-	// border-bottom: $b-border
-	color: $c-highlight
+	border-bottom: $b-border
+	color: $c-accent
 	text-decoration: none
 	&:hover,
 	&:focus
 		border-bottom-color: $c-highlight
-		color: $c-subdue
+		color: $c-text
 
 // ----- Images ----- //
 
