--- a/app/assets/stylesheets/components/_button.sass
+++ b/app/assets/stylesheets/components/_button.sass
@@ -1,8 +1,8 @@
 .button
+	border-bottom: 0px none
 	color: rgba(0, 0, 0, 0.54)
 	display: inline-block
 	margin-right: 1em
-	text-decoration: none
 
 	&:active, &:focus, &:hover
 		color: rgba(0, 0, 0, 0.26)
