--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -29,6 +29,7 @@ $blue-900: #0d47a1
 
 // ----- Base ----- //
 
+$c-accent: $blue-500
 $c-background-invert: #fff
 $c-background: #eee
 $c-border: lighten($plum, 30%)
@@ -55,8 +56,8 @@ $c-text: #444
 
 $b-borderRadius: 3px
 $b-borderStyle: solid
-$b-borderWidth: 2px
-$b-border: $b-borderWidth $b-borderStyle $c-border
+$b-borderWidth: 1px
+$b-border: $b-borderWidth $b-borderStyle $c-text
 $b-boxShadow: 0 2px 0 rgba($c-text, 0.25)
 
 // ----- Typography ----- //
