--- a/app/assets/stylesheets/components/_button.sass
+++ b/app/assets/stylesheets/components/_button.sass
@@ -2,7 +2,8 @@
 	border-bottom: 0px none
 	color: rgba(0, 0, 0, 0.54)
 	display: inline-block
-	margin-right: 1em
+	margin: auto 1em auto 0
+	vertical-align: middle
 
 	&:active, &:focus, &:hover
 		color: rgba(0, 0, 0, 0.26)
