Correct style plaecement - don't write CSS while distracted, kids.

--- a/app/assets/stylesheets/components/_button.sass
+++ b/app/assets/stylesheets/components/_button.sass
@@ -2,8 +2,7 @@
 	border-bottom: 0px none
 	color: rgba(0, 0, 0, 0.54)
 	display: inline-block
-	margin: auto 1em auto 0
-	vertical-align: middle
+	margin-right: 1em
 
 	&:active, &:focus, &:hover
 		color: rgba(0, 0, 0, 0.26)
