Add details and links to machines index.

--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -1,8 +1,31 @@
 <% page_title "Machines" %>
 			<article class="focus focus--top">
+				<p>
+					<a class="button button--icon" href="<%= url_for root_path %>">
+						<svg class="icon"><use xlink:href="#icon-home"></use></svg>
+					</a>
+					<a class="button button--icon" href="<%= url_for new_machine_path %>">
+						<svg class="icon"><use xlink:href="#icon-plus"></use></svg>
+					</a>
+					<span class="tsm fr"><%= pluralize(@machines.count, "Computer") %> Registered</span>
+				</p>
+
+				<p class="twb">Machines currently registered:</p>
+
 <% if !@machines.blank? %>
 	<% for machine in @machines %>
-				<p>Machine: <%= machine.name %></p>
+				<p>
+					<%= link_to machine, class: "button button--icon" do %>
+						<svg class="icon"><use xlink:href="#icon-view"></use></svg>
+					<% end %>
+					<%= link_to edit_machine_path(machine), class: "button button--icon" do %>
+						<svg class="icon"><use xlink:href="#icon-edit"></use></svg>
+					<% end %>
+					<%= link_to machine, method: :delete, class: "button button--icon" do %>
+						<svg class="icon"><use xlink:href="#icon-cross"></use></svg>
+					<% end %>
+					<span class="twb"><%= machine.name %></span> &mdash; <%= pluralize(machine.alerts.count, "Alerts") %>
+				</p>
 	<% end %>
 <% else %>
 				<p>There are no machines to display.</p>
