--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,8 +1,24 @@
 <% page_title "Alerts" %>
 			<article class="focus focus--top">
+				<p>
+					<a class="button button--icon" href="<%= url_for root_path %>">
+						<svg class="icon"><use xlink:href="#icon-home"></use></svg>
+					</a>
+					<span class="tsm fr"><%= pluralize(@alerts.count, "Alert") %></span>
+				</p>
+
 <% if !@alerts.blank? %>
 	<% for alert in @alerts %>
-				<p>Alert: <%= alert.name %></p>
+				<p class="mbf">
+					<%= link_to alert, class: "button button--icon" do %>
+						<svg class="icon"><use xlink:href="#icon-view"></use></svg>
+					<% end %>
+					<%= link_to alert, method: :delete, data: {confirm: "Are you sure you want to remove #{alert.name}?"}, class: "button button--icon" do %>
+						<svg class="icon"><use xlink:href="#icon-cross"></use></svg>
+					<% end %>
+					<span class="twb"><%= alert.name %><%= " (" + alert.alertable.name + ")" if alert.alertable.present? %></span> &mdash; 
+					<%= alert.message.truncate(50, separator: ' ') %>
+				</p>
 	<% end %>
 <% else %>
 				<p>There are no alerts to display.</p>
