Add tile component for machines (needs refactoring), material design styles (color variables, Roboto typeface), and begin moving away from button/icon component scheme as it currently stands.

--- a/app/assets/stylesheets/components/_icon.sass
+++ b/app/assets/stylesheets/components/_icon.sass
@@ -1,7 +1,7 @@
 .icon
 	display: inline-block
 	fill: currentColor
-	height: $b-space
+	height: 1em
 	margin: auto
-	width: $b-space
+	width: 1em
 	vertical-align: middle
