--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,19 @@
 <%= render 'layouts/footer' %>
 
 		<div class="modalOverlay" id="modalOverlay"></div>
+		<script type="text/javascript">
+			WebFontConfig = {
+				google: { families: [ 'Roboto:400,400italic,500:latin' ] }
+			};
+			(function() {
+				var wf = document.createElement('script');
+				wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+				'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+				wf.type = 'text/javascript';
+				wf.async = 'true';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(wf, s);
+			})();
+		</script>
 	</body>
 </html>
