--- a/app/assets/stylesheets/components/_button.sass
+++ b/app/assets/stylesheets/components/_button.sass
@@ -2,6 +2,7 @@
 	border-bottom: 0px none
 	color: rgba(0, 0, 0, 0.54)
 	display: inline-block
+	font-size: 1.5em
 	margin-right: 1em
 
 	&:active, &:focus, &:hover
