--- a/app/assets/stylesheets/foundation/_base.sass
+++ b/app/assets/stylesheets/foundation/_base.sass
@@ -7,7 +7,7 @@
 
 html
 	background: $c-background
-	color: $c-text
+	color: $c-text-primary
 	font-family: $b-fontFamily
 	font-size: $b-fontSize
 	line-height: $b-lineHeight
