--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -38,7 +38,20 @@ $c-highlight: $plum
 $c-shadow: rgba(0, 0, 0, 0.3)
 $c-subdue: lighten($plum, 40%)
 $c-text-invert: #fff
-$c-text: #444
+// $c-text: #000
+
+$c-text: #000
+$c-text-invert: #fff
+
+$c-text-primary: rgba($c-text, 0.87)
+$c-text-secondary: rgba($c-text, 0.54)
+$c-text-disabled: rgba($c-text, 0.26)
+$c-text-divider: rgba($c-text, 0.12)
+
+$c-text-invert-primary: $c-text-invert
+$c-text-invert-secondary: rgba($c-text-invert, 0.7)
+$c-text-invert-disabled: rgba($c-text-invert, 0.30)
+$c-text-invert-divider: rgba($c-text-invert, 0.12)
 
 // ----- Components ----- //
 
@@ -62,15 +75,15 @@ $b-boxShadow: 0 2px 0 rgba($c-text, 0.25)
 
 // ----- Typography ----- //
 
-$b-fontFamily-heading: sans-serif
-$b-fontFamily: sans-serif
+$b-fontFamily-heading: 'Roboto', sans-serif
+$b-fontFamily: 'Roboto', sans-serif
 $b-fontSize: 16px
 $b-fontSize-xs: 60%
 $b-fontSize-s: 75%
 $b-fontSize-m: 90%
 $b-fontSize-l: 115%
 $b-fontSize-xl: 150%
-$b-lineHeight: 1.5
+$b-lineHeight: 1.25
 
 // ----- Sizing ----- //
 
