--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -13,7 +13,22 @@
 <% if !@machines.blank? %>
 				<p class="twb">Machines currently registered:</p>
 	<% for machine in @machines %>
-				<p>
+				<div class="tile">
+					<%= link_to machine, class: "tile-action" do %>
+						<svg class="tile-icon"><use xlink:href="#icon-view"></use></svg>
+						<div class="tile-text">
+							<div class="tile-title">
+								<%= machine.name %>
+								<%= "(" + pluralize(machine.alerts.count, 'Alert') + ")" if machine.alerts.any? %>
+							</div>
+							<div class="tile-subtitle">
+								<%= machine.location %> &mdash;
+								<%= machine.ip_address %>
+							</div>
+						</div>
+					<% end %>
+				</div>
+				<!-- <p>
 					<%= link_to machine, class: "button button--icon" do %>
 						<svg class="icon"><use xlink:href="#icon-view"></use></svg>
 					<% end %>
@@ -24,7 +39,7 @@
 						<svg class="icon"><use xlink:href="#icon-cross"></use></svg>
 					<% end %>
 					<span class="twb"><%= machine.name %></span> &mdash; <%= pluralize(machine.alerts.count, "Alerts") %>
-				</p>
+				</p> -->
 	<% end %>
 <% else %>
 				<p>There are no machines to display.</p>
