--- a/app/assets/stylesheets/components/_tile.sass
+++ b/app/assets/stylesheets/components/_tile.sass
@@ -15,8 +15,13 @@
 	float: left
 	font-size: 1.5em
 	height: 100%
-	margin-right: (4em / 3)
 	width: 1em
+
+.tile-icon--a
+	margin: 0 (4em / 3) 0 (2em / 3)
+
+.tile-icon--b
+	margin: 0 (2em / 3)
 
 .tile-text
 	float: left
