--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -85,6 +85,8 @@ $b-fontSize-l: 115%
 $b-fontSize-xl: 150%
 $b-lineHeight: 1.25
 
+$b-fontSize-secondary: 14px
+
 // ----- Sizing ----- //
 
 $b-maxWidth: em(1024px)
