--- a/app/views/disks/index.html.erb
+++ b/app/views/disks/index.html.erb
@@ -28,7 +28,7 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to edit_disk_path(disk), class: "tile-action fr" do %>
+					<%= link_to edit_disk_path(disk), class: "tile-action tile-action--r" do %>
 						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-edit"></use></svg>
 					<% end %>
 				</div>
