--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -27,7 +27,7 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to edit_machine_path(machine), class: "tile-action fr" do %>
+					<%= link_to edit_machine_path(machine), class: "tile-action tile-action--r" do %>
 						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-edit"></use></svg>
 					<% end %>
 				</div>
