--- a/app/assets/stylesheets/components/_tile.sass
+++ b/app/assets/stylesheets/components/_tile.sass
@@ -1,33 +1,40 @@
 .tile
+	display: flex
 	height: 4.5em
-
-	// border: 1px solid black
+	justify-content: space-around
+	max-width: 100%
 
 .tile-action
 	border-bottom: none
 	color: inherit
-	display: inline-block
-	height: 100%
+	height: 4.5em
+
+.tile-action--focus
+	flex-grow: 1
+	flex-shrink: 1
+	width: 0
 
 .tile-icon
+	box-sizing: content-box
 	color: $c-text-secondary
 	fill: currentColor
-	float: left
 	font-size: 1.5em
 	height: 100%
 	width: 1em
 
 .tile-icon--a
-	margin: 0 (4em / 3) 0 (2em / 3)
+	padding: 0 (4em / 3) 0 (2em / 3)
 
 .tile-icon--b
-	margin: 0 (2em / 3)
+	padding: 0 (2em / 3)
 
 .tile-text
-	float: left
-	height: 100%
 	padding-top: 1em
 
 .tile-subtitle
 	color: $c-text-secondary
 	font-size: em(14px)
+	max-width: 100%
+	white-space: nowrap
+	overflow: hidden
+	text-overflow: ellipsis
