--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -16,6 +16,8 @@
 				<div class="tile">
 					<%= link_to machine, class: "tile-action" do %>
 						<svg class="tile-icon tile-icon--a"><use xlink:href="#icon-view"></use></svg>
+					<% end %>
+					<%= link_to machine, class: "tile-action tile-action--focus" do %>
 						<div class="tile-text">
 							<div class="tile-title">
 								<%= machine.name %>
@@ -27,22 +29,10 @@
 							</div>
 						</div>
 					<% end %>
-					<%= link_to edit_machine_path(machine), class: "tile-action tile-action--r" do %>
+					<%= link_to edit_machine_path(machine), class: "tile-action" do %>
 						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-edit"></use></svg>
 					<% end %>
 				</div>
-				<!-- <p>
-					<%= link_to machine, class: "button button--icon" do %>
-						<svg class="icon"><use xlink:href="#icon-view"></use></svg>
-					<% end %>
-					<%= link_to edit_machine_path(machine), class: "button button--icon" do %>
-						<svg class="icon"><use xlink:href="#icon-edit"></use></svg>
-					<% end %>
-					<%= link_to machine, method: :delete, data: {confirm: "Are you sure you want to remove #{machine.name}?"}, class: "button button--icon" do %>
-						<svg class="icon"><use xlink:href="#icon-cross"></use></svg>
-					<% end %>
-					<span class="twb"><%= machine.name %></span> &mdash; <%= pluralize(machine.alerts.count, "Alerts") %>
-				</p> -->
 	<% end %>
 <% else %>
 				<p>There are no machines to display.</p>
