Remove button component from header. Need to modify it elsewhere or remove it.

--- a/app/assets/stylesheets/components/_button.sass
+++ b/app/assets/stylesheets/components/_button.sass
@@ -1,15 +1,15 @@
 .button
 	border-bottom: 0px none
-	color: rgba(0, 0, 0, 0.54)
+	color: $c-text-secondary
 	display: inline-block
 	font-size: 1.5em
 	margin-right: 1em
 
 	&:active, &:focus, &:hover
-		color: rgba(0, 0, 0, 0.26)
+		color: $c-text-disabled
 
 .button--light
-	color: rgba(255, 255, 255, 1)
+	color: $c-text-invert-primary
 
 	&:active, &:focus, &:hover
-		color: rgba(255, 255, 255, 0.3)
+		color: $c-text-invert-disabled
