Add hover state to tiles.

--- a/app/assets/stylesheets/foundation/_config.sass
+++ b/app/assets/stylesheets/foundation/_config.sass
@@ -23,6 +23,8 @@
 
 $plum: #4e4e5b
 
+$blue-50: #e3f2fd
+$blue-100: #bbdefb
 $blue-500: #2196f3
 $blue-900: #0d47a1
 
@@ -39,6 +41,8 @@ $c-shadow: rgba(0, 0, 0, 0.3)
 $c-subdue: lighten($plum, 40%)
 $c-text-invert: #fff
 // $c-text: #000
+
+$c-hover: $blue-50
 
 $c-text: #000
 $c-text-invert: #fff
