--- a/app/assets/stylesheets/components/_tile.sass
+++ b/app/assets/stylesheets/components/_tile.sass
@@ -4,6 +4,11 @@
 	justify-content: space-around
 	max-width: 100%
 
+	&:active, &:focus, &:hover
+		background-color: $c-hover
+
+	transition: background-color 0.2s
+
 .tile-action
 	border-bottom: none
 	color: inherit
