Revise actionBar structure and add home link. Is it too unbalanced?

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,24 @@
 		<header class="header mbf">
 			<div class="actionBar group">
-				<a class="icon icon--light" id="sideNav-button" href="#">
-					<svg><use xlink:href="#icon-menu"></use></svg>
-				</a>
+				<div class="fl">
+					<a class="icon icon--light" id="sideNav-button" href="#">
+						<svg><use xlink:href="#icon-menu"></use></svg>
+					</a>
+				</div>
+				<div class="fr">
+					<%= link_to root_path, class: "icon icon--light" do %>
+						<svg><use xlink:href="#icon-home"></use></svg>
+					<% end %>
 <% if user_signed_in? %>
-				<%= link_to destroy_user_session_path, method: :delete, class: "icon icon--light fr mrf" do %>
-					<svg><use xlink:href="#icon-logout"></use></svg>
-				<% end %>
+					<%= link_to destroy_user_session_path, method: :delete, class: "icon icon--light" do %>
+						<svg><use xlink:href="#icon-logout"></use></svg>
+					<% end %>
 <% else %>
-				<%= link_to new_user_session_path, class: "icon icon--light fr mrf" do %>
-					<svg><use xlink:href="#icon-login"></use></svg>
-				<% end %>
+					<%= link_to new_user_session_path, class: "icon icon--light" do %>
+						<svg><use xlink:href="#icon-login"></use></svg>
+					<% end %>
 <% end %>
+				</div>
 			</div>
 			<div class="header-title">
 				<h1 class="mbf"><%= yield :page_title %></h1>
