Add floating action button to machine and disk indices. Remove unnecessary navigation and status indicators.

--- a/app/assets/stylesheets/components/_icon.sass
+++ b/app/assets/stylesheets/components/_icon.sass
@@ -22,3 +22,13 @@
 	height: 1em
 	margin: auto
 	width: 1em
+
+.icon--float
+	background: #1565c0
+	border-radius: 50%
+	box-shadow: 0 2px 4px 0 $c-shadow
+	position: absolute
+	right: 1em
+	top: -1em
+
+	@extend .icon--light
