Correct header padding when gutters disappear, swap a's for link_to's, and place floating action button beside subheader.

--- a/app/assets/stylesheets/components/_header.sass
+++ b/app/assets/stylesheets/components/_header.sass
@@ -10,4 +10,10 @@
 	border-bottom-right-radius: 0
 	margin: auto
 	max-width: $b-maxWidth
-	padding: 1em
+	padding: 1em 0
+
+	+respond-to($b-maxWidth)
+		padding: 1em
+
+	h1
+		padding: 0.5em
