--- a/app/views/disks/index.html.erb
+++ b/app/views/disks/index.html.erb
@@ -1,8 +1,8 @@
 <% page_title "Disks" %>
 			<article class="focus focus--top">
-				<a class="icon icon--float" href="<%= url_for new_disk_path %>">
+				<%= link_to new_disk_path, class: "icon icon--float", title: "Add new disk" do %>
 					<svg><use xlink:href="#icon-plus"></use></svg>
-				</a>
+				<% end %>
 <% if !@disks.blank? %>
 				<p class="subheader subheader--padded">Disks (<%= @disks.count %>)</p>
 	<% for disk in @disks %>
