--- a/app/views/machines/index.html.erb
+++ b/app/views/machines/index.html.erb
@@ -4,8 +4,35 @@
 					<svg><use xlink:href="#icon-plus"></use></svg>
 				<% end %>
 
+<% if !@machines_with_alerts.blank? %>
+				<p class="subheader subheader--padded">Machines with Alerts (<%= @machines_with_alerts.count %>)</p>
+	<% for machine in @machines_with_alerts %>
+				<div class="tile">
+					<%= link_to machine, class: "tile-action" do %>
+						<svg class="tile-icon tile-icon--a"><use xlink:href="#icon-view"></use></svg>
+					<% end %>
+					<%= link_to machine, class: "tile-action tile-action--focus" do %>
+						<div class="tile-text">
+							<div class="tile-title">
+								<%= machine.name %>
+								<%= "(" + pluralize(machine.alerts.count, 'Alert') + ")" if machine.alerts.any? %>
+							</div>
+							<div class="tile-subtitle">
+								<%= machine.location %> &mdash;
+								<%= machine.ip_address %>
+							</div>
+						</div>
+					<% end %>
+					<%= link_to edit_machine_path(machine), class: "tile-action" do %>
+						<svg class="tile-icon tile-icon--b"><use xlink:href="#icon-edit"></use></svg>
+					<% end %>
+				</div>
+	<% end %>
+				<div class="divider"></div>
+<% end %>
+
 <% if !@machines.blank? %>
-				<p class="subheader subheader--padded">Machines</p>
+				<p class="subheader subheader--padded">All Machines (<%= @machines.count %>)</p>
 	<% for machine in @machines %>
 				<div class="tile">
 					<%= link_to machine, class: "tile-action" do %>
@@ -29,6 +56,6 @@
 				</div>
 	<% end %>
 <% else %>
-				<p>There are no machines to display.</p>
+				<p class="subheader subheader--padded">There are no machines to display.</p>
 <% end %>
 			</article>
