Change header border-bottom to match prescribed divider color.

--- a/app/assets/stylesheets/components/_header.sass
+++ b/app/assets/stylesheets/components/_header.sass
@@ -4,7 +4,7 @@
 .header-title
 	background: $c-focus
 	box-shadow: 0 2px 4px 0 $c-shadow
-	border-bottom: 1px solid $c-background
+	border-bottom: 1px solid $c-text-divider
 	border-radius: 2px
 	border-bottom-left-radius: 0
 	border-bottom-right-radius: 0
